--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,13 @@
 	ci = commit
 	br = branch
 	st = status
+        lol = log --graph --decorate --pretty=oneline --abbrev-commit
+        lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+[color]
+        branch = auto
+        diff = auto
+        interactive = auto
+        status = auto
 [user]
 	name = crhino
 	email = piraino.chris@gmail.com
